stacks/k8s_utils/security/default-deny-all-network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: miztiik-automation-ns
  name: default-deny-all-egress
  labels:
    owner: miztiik-automation
    name: default-deny-all-egress
    project: eks-security-with-network-policies
spec:
  podSelector: {}
  egress:
  - to:
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
  policyTypes:
  - Egress
